crates/runtime/tests/search/snapshots/integration_models__search__arrow-s3_vectors-dataset-multi_column_megascience_additional_columns_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.03,
      "data": {
        "question": "Which base number, when raised to the fifth power, equals thirty-two?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ],
        "question": [
          "Which base number, when raised to the fifth power, equals thirty-two?"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": 0.03,
      "data": {
        "question": "What is the fifth root of 32?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ],
        "question": [
          "What is the fifth root of 32?"
        ]
      },
      "primary_key": {
        "id": 948
      }
    },
    {
      "_score": 0.01,
      "data": {
        "question": "Evaluate the expression \\( 2 - 2x^2 \\), where \\( x = -3 \\)."
      },
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "Evaluate the expression \\( 2 - 2x^2 \\), where \\( x = -3 \\)."
        ]
      },
      "primary_key": {
        "id": 189
      }
    },
    {
      "_score": 0.01,
      "data": {
        "question": "How many groups of 2 are in 14?"
      },
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "To find how many groups of 2 are in 14, divide 14 by 2:  \n\\[ 14 \\div 2 = 7 \\]  \nThus, there are $\\boxed{7}$ groups of 2 in 14."
        ]
      },
      "primary_key": {
        "id": 462
      }
    }
  ]
}
