crates/runtime/tests/search/snapshots/integration_models__search__arrow-s3_vectors-dataset-multi_column_megascience_basic_response.snap
---
source: crates/runtime/tests/search/mod.rs
expression: normalize_search_response(resp)
---
{
  "duration_ms": "duration_ms_val",
  "results": [
    {
      "_score": 0.03,
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The base number is \\(\\boxed{2}\\), because \\(2^5 = 2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ],
        "question": [
          "Which base number, when raised to the fifth power, equals thirty-two?"
        ]
      },
      "primary_key": {
        "id": 1277
      }
    },
    {
      "_score": 0.03,
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "The fifth root of 32 is \\(\\boxed{2}\\), because \\(2 \\times 2 \\times 2 \\times 2 \\times 2 = 32\\)."
        ],
        "question": [
          "What is the fifth root of 32?"
        ]
      },
      "primary_key": {
        "id": 948
      }
    },
    {
      "_score": 0.03,
      "dataset": "spice.public.qs",
      "matches": {
        "answer": [
          "To find how many groups of 5 are in 25, divide 25 by 5:  \n\\[ 25 \\div 5 = 5 \\]  \nSo, there are $\\boxed{5}$ groups of 5 in 25."
        ],
        "question": [
          "How many groups of 5 are in 25?"
        ]
      },
      "primary_key": {
        "id": 464
      }
    },
    {
      "_score": 0.01,
      "dataset": "spice.public.qs",
      "matches": {
        "question": [
          "How many multiples of 4 are there between 1 and 30? List them and count the total."
        ]
      },
      "primary_key": {
        "id": 468
      }
    }
  ]
}
