crates/runtime/tests/search/snapshots/integration_models__search__arrow-s3_vectors-dataset-multi_column_megascience_vector_search_sql_basic_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(score, 3) FROM vector_search(qs, 'second', answer) order by score desc, id LIMIT 4"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                              |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, trunc(vector_search(qs, Utf8("second"), answer).score,Int64(3))                                                       |
|               |   Sort: vector_search(qs, Utf8("second"), answer).score DESC NULLS FIRST, vector_search(qs, Utf8("second"), answer).id ASC NULLS LAST, fetch=4                                                                                    |
|               |     Projection: vector_search(qs, Utf8("second"), answer).id, vector_search(qs, Utf8("second"), answer).answer, trunc(vector_search(qs, Utf8("second"), answer).score, Int64(3)), vector_search(qs, Utf8("second"), answer).score |
|               |       TableScan: vector_search(qs, Utf8("second"), answer) projection=[answer, id, score]                                                                                                                                         |
| physical_plan | ProjectionExec: expr=[id@0 as id, answer@1 as answer, trunc(vector_search(qs, Utf8("second"), answer).score,Int64(3))@2 as trunc(vector_search(qs, Utf8("second"), answer).score,Int64(3))]                                       |
|               |   SortPreservingMergeExec: [score@3 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                                                           |
|               |     SortExec: TopK(fetch=4), expr=[score@3 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                                               |
|               |       ProjectionExec: expr=[id@1 as id, answer@0 as answer, trunc(score@2, 3) as trunc(vector_search(qs, Utf8("second"), answer).score,Int64(3)), score@2 as score]                                                               |
|               |         RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                                      |
|               |           ProjectionExec: expr=[answer@2 as answer, id@0 as id, score@1 as score]                                                                                                                                                 |
|               |             HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, score@1, answer@2]                                                                            |
|               |               CoalescePartitionsExec                                                                                                                                                                                              |
|               |                 ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as score]                                                                                                                                        |
|               |                   CooperativeExec                                                                                                                                                                                                 |
|               |                     RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                                          |
|               |                       BytesProcessedExec                                                                                                                                                                                          |
|               |                         CooperativeExec                                                                                                                                                                                           |
|               |                           S3VectorsQueryExec (spice-ci-tests-s3-vectors/arrow-dataset-multi-column-2): limit=100                                                                                                                  |
|               |               SchemaCastScanExec                                                                                                                                                                                                  |
|               |                 BytesProcessedExec                                                                                                                                                                                                |
|               |                   DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                                                               |
|               |                                                                                                                                                                                                                                   |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
