crates/runtime/tests/search/snapshots/integration_models__search__arrow-s3_vectors-dataset-multi_column_megascience_vector_search_sql_filters_explain.snap
---
source: crates/runtime/tests/search/mod.rs
description: "SELECT id, answer, trunc(score, 3) as score FROM vector_search(qs, 'secondary', answer) where subject!='math' order by score desc, id LIMIT 4"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                             |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: score DESC NULLS FIRST, vector_search(qs, Utf8("secondary"), answer).id ASC NULLS LAST, fetch=4                                                                                            |
|               |   Projection: vector_search(qs, Utf8("secondary"), answer).id, vector_search(qs, Utf8("secondary"), answer).answer, trunc(vector_search(qs, Utf8("secondary"), answer).score, Int64(3)) AS score |
|               |     TableScan: vector_search(qs, Utf8("secondary"), answer) projection=[answer, id, score], full_filters=[vector_search(qs, Utf8("secondary"), answer).subject != Utf8("math")]                  |
| physical_plan | SortPreservingMergeExec: [score@2 DESC, id@0 ASC NULLS LAST], fetch=4                                                                                                                            |
|               |   SortExec: TopK(fetch=4), expr=[score@2 DESC, id@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                                                |
|               |     ProjectionExec: expr=[id@0 as id, answer@2 as answer, trunc(score@1, 3) as score]                                                                                                            |
|               |       FilterExec: subject@3 != math, projection=[id@0, score@1, answer@2]                                                                                                                        |
|               |         HashJoinExec: mode=CollectLeft, join_type=Left, accumulator=MinMaxLeftAccumulator, on=[(id@0, id@1)], projection=[id@0, score@1, answer@2, subject@4]                                    |
|               |           CoalescePartitionsExec                                                                                                                                                                 |
|               |             ProjectionExec: expr=[CAST(key@0 AS Int64) as id, 1 - distance@1 as score]                                                                                                           |
|               |               CooperativeExec                                                                                                                                                                    |
|               |                 RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                             |
|               |                   BytesProcessedExec                                                                                                                                                             |
|               |                     CooperativeExec                                                                                                                                                              |
|               |                       S3VectorsQueryExec (spice-ci-tests-s3-vectors/arrow-dataset-multi-column-9): limit=100                                                                                     |
|               |           RepartitionExec: partitioning=RoundRobinBatch(3), input_partitions=1                                                                                                                   |
|               |             FilterExec: subject@2 != math                                                                                                                                                        |
|               |               SchemaCastScanExec                                                                                                                                                                 |
|               |                 BytesProcessedExec                                                                                                                                                               |
|               |                   DataSourceExec: partitions=1, partition_sizes=[1]                                                                                                                              |
|               |                                                                                                                                                                                                  |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
